--- a/admin-page/src/layouts/css/layout.scss
+++ b/admin-page/src/layouts/css/layout.scss
@@ -5,9 +5,10 @@
     padding-left: $sidebarWidth;
     padding-top: $topNavHeight;
     overflow-x: hidden;
+    background-color: $mainBg-Light;
 
     &__content {
-      min-height: 100vh;
+      min-height: calc(100vh - $topNavHeight);
       transition: all 0.3s ease-in-out;
     }
 
