--- a/admin-page/src/components/company-detail/css/company-detail.scss
+++ b/admin-page/src/components/company-detail/css/company-detail.scss
@@ -1,45 +1,50 @@
 @use "../../../scss/abstracts/" as *;
 
 .company-detail-dialog {
-  .toggle-change {
-    @include flex(center, center);
+  .company-detail-top {
+    @include flex(center, space-between);
+    padding: 0 24px;
 
-    .toggle-option-active {
-      font-weight: bold;
-    }
+    .toggle-change {
+      @include flex(center, center);
 
-    .toggle-checkbox {
-      position: relative;
-      width: 40px;
-      height: 20px;
-      -webkit-appearance: none;
-      background: #c6c6c6;
-      outline: none;
-      border-radius: 20px;
-      transition: 0.7s;
-      margin: 0 18px;
-    }
+      .toggle-option-active {
+        font-weight: bold;
+      }
 
-    .toggle-checkbox:checked {
-      background: #0066ff;
-    }
+      .toggle-checkbox {
+        position: relative;
+        width: 40px;
+        height: 20px;
+        -webkit-appearance: none;
+        background: #c6c6c6;
+        outline: none;
+        border-radius: 20px;
+        transition: 0.7s;
+        margin: 0 12px;
+      }
 
-    .toggle-checkbox:before {
-      content: "";
-      position: absolute;
-      width: 15px;
-      height: 15px;
-      border-radius: 20px;
-      top: 2px;
-      left: 4px;
-      background: #ffffff;
-      transform: scale(1.1);
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-      transition: 0.5s;
-    }
+      .toggle-checkbox:checked {
+        background: #0066ff;
+      }
 
-    .toggle-checkbox:checked:before {
-      left: 20px;
+      .toggle-checkbox:before {
+        content: "";
+        position: absolute;
+        width: 15px;
+        height: 15px;
+        border-radius: 20px;
+        top: 2px;
+        left: 4px;
+        background: #ffffff;
+        transform: scale(1.1);
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        transition: 0.5s;
+      }
+
+      .toggle-checkbox:checked:before {
+        left: 20px;
+      }
     }
   }
 
